After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790708 - Wrong/missing icons and mismatched update descriptions in Fedora 27
Wrong/missing icons and mismatched update descriptions in Fedora 27
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.26.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-11-22 13:32 UTC by Michael Catanzaro
Modified: 2017-12-05 11:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot #1 (29.03 KB, image/png)
2017-11-22 13:32 UTC, Michael Catanzaro
Details
Screenshot #2 (68.21 KB, image/png)
2017-11-22 13:33 UTC, Michael Catanzaro
Details
Screenshot #3 (51.07 KB, image/png)
2017-11-22 13:33 UTC, Michael Catanzaro
Details

Description Michael Catanzaro 2017-11-22 13:32:49 UTC
Created attachment 364186 [details]
Screenshot #1

I just installed updates in Fedora 27. When booting after installing updates, I clicked the Review notification to see what had been installed. I see:

 * There is no icon for GNOME Software on the Installed Updates dialog. The left space where icons are supposed to be is entirely blank. (Screenshot #1)
 * When clicking on GNOME Software, I see the icon for GNOME Calculator. (Screenshot #2)
 * When clicking on fwupd, I see the update description for GNOME Software. I guess because they went out in the same Koji update, but it seems very confusing. (Screenshot #3).
Comment 1 Michael Catanzaro 2017-11-22 13:33:02 UTC
Created attachment 364187 [details]
Screenshot #2
Comment 2 Michael Catanzaro 2017-11-22 13:33:16 UTC
Created attachment 364188 [details]
Screenshot #3
Comment 3 Richard Hughes 2017-12-05 11:15:02 UTC
Yes, this is because the way we build the distro; i.e. we only shipped one update that actually consisted of three updated components. We don't get individual update descriptions. When we have a beautiful ostree and flatpak future we can fix this properly.

For the missing icons, I've checked in:

commit 8a01c3498b94ef806ed8af6ef6710b52894f7d51 (HEAD -> master)
Author: Richard Hughes <richard@hughsie.com>
Date:   Tue Dec 5 11:13:54 2017 +0000

    trivial: Show icons in the updated dialog
    
    Fixes some of https://bugzilla.gnome.org/show_bug.cgi?id=790708

:100644 100644 c607a6a3... ec670271... M        src/gs-update-dialog.c