trivial: Show icons in the updated dialog

Fixes some of https://bugzilla.gnome.org/show_bug.cgi?id=790708